--- a/kokoa-clone/css/components/status-bar.css
+++ b/kokoa-clone/css/components/status-bar.css
@@ -3,9 +3,13 @@
   position: fixed;
   top:0;
   width: 100%;
+  height: 25px;
   display: flex;
   justify-content: center;
-  background-color: rgb(211, 211, 211);
+  align-items: center;
+  background-color: rgba(211, 211, 211, 0.3);
+  box-sizing: border-box;
+  padding: 0px 10px;
 }
 
 .status-bar__column{
