--- a/kokoa-clone/css/style.css
+++ b/kokoa-clone/css/style.css
@@ -4,10 +4,12 @@
 /*Components*/
 @import "components/status-bar.css";
 @import "components/navigation-bar.css";
+@import "components/screen-header.css";
 /*Screens*/
 @import "screens/login.css";
 @import "screens/friends.css";
 
 body{
   font-family: 'Open Sans', sans-serif;
+  padding-top: 90px;
 }
