--- a/kokoa-clone/submit6.css
+++ b/kokoa-clone/submit6.css
@@ -1,105 +1,165 @@
-body{
-    background-color:#f1f1f3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-    width: 100%;
-    min-width: 800px;
+* {
+	box-sizing: border-box;
+}
+body {
+	background-color: #f1f1f3;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+		'Helvetica Neue', sans-serif;
+	width: 100%;
+	min-width: 800px;
 }
 
-.screen{
-    width: 400px;
-    height: 750px;
-    border-radius: 30px;
-    background-color: white;
-    margin: 30px;
-    position: relative;
-    padding: 80px 10px;
+.screen {
+	width: 400px;
+	height: 750px;
+	border-radius: 30px;
+	background-color: white;
+	margin: 30px;
+	position: relative;
+	padding: 80px 10px;
 }
 
-.Topmenu{
-    position: absolute;
-    top: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 400px;
-    padding: 15px 15px;
-    box-sizing: border-box;
+.Topmenu {
+	position: absolute;
+	top: 20px;
+	left: 0px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	padding: 15px 30px;
+	box-sizing: border-box;
 }
-.shadow{
-    box-shadow: inherit 0px 4px;
-    opacity: 0.3;
-
+.shadow {
+	box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
 }
-.Topmenu a{
-    text-decoration: none;
-    color: black;
-}
-
-.Topmenu a:hover{
-    color: blueviolet;
+.Topmenu a {
+	text-decoration: none;
+	color: black;
 }
 
-.playing{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.Topmenu a:hover {
+	color: blueviolet;
 }
 
-.playing img{
-    width: 80px;
-    height: 80px;
-    border-radius: 100%;
-    box-shadow: 0px 4px #5d5f6e;
+.playing {
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
-.playing__info{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.playing img {
+	width: 80px;
+	height: 80px;
+	border-radius: 100%;
+	box-shadow: 0px 4px 30px #5d5f6e;
 }
 
-.playing__info h4{
-    margin-top: 0px;
-    color: grey;
-    opacity: 0.5;
+.playing__info {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
-.shuffleheart{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.playing__info h4 {
+	margin-top: 0px;
+	color: grey;
+	opacity: 0.5;
 }
 
-.shuffleheart__box{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 120px;
-    height: 50px;
-    border-radius: 30px;
-    margin: 10px;
+.shuffleheart {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.shuffleheart a {
+	text-decoration: none;
 }
 
-.shuffleheart__box:first-child{
-    background-color: black;
-    color: white;
-}
-.shuffleheart__box:nth-child(2){
-    box-shadow: rgba(0,0,0,0.1) 1px 2px;
-}
-
-.shuffleheart__box:nth-child(2) span{
-    margin-left: 10px;
-    opacity: 0.4;
+.shuffleheart__box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 130px;
+	height: 50px;
+	border-radius: 30px;
+	margin: 10px;
 }
 
-.musicList{
-    list-style: none;
+.shuffleheart__box:first-child {
+	background-color: black;
+	color: white;
+}
 
+.shuffleheart__box:nth-child(2) {
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	color: rgba(0, 0, 0, 0.4);
+}
+
+.musicList {
+	list-style: none;
+	width: 100%;
+	height: fit-content;
+	padding: 15px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	padding: 0px;
+}
+.musicList__row {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 360px;
+	height: 80px;
+	border-radius: 20px;
+	padding: 5px 20px;
+	transition: box-shadow ease-in-out 0.2s;
+}
+.musicList__row__leftbox {
+	display: flex;
+	justify-content: left;
+	align-items: center;
+}
+.musicList__row__leftbox img {
+	width: 55px;
+	height: 55px;
+	border-radius: 10px;
+	margin: 0px 15px;
+}
+.musicList__row:hover {
+	box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
+}
+
+.musicList__row__info {
+	display: flex;
+	justify-content: left;
+	flex-direction: column;
+}
+
+.musicList__row__info h4 {
+	margin-bottom: 0px;
+	color: rgba(0, 0, 0, 0.4);
+}
+.musicList__row__info h3 {
+	margin-top: 5px;
+}
+
+.musicList__row:nth-child(2) {
+}
+
+.musicList__row:nth-child(2) img {
+}
+
+.musicList__row:active {
+	box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.4);
 }
