--- a/kokoa-clone/submit6.css
+++ b/kokoa-clone/submit6.css
@@ -9,11 +9,11 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
 		'Helvetica Neue', sans-serif;
 	width: 100%;
-	min-width: 800px;
+	min-width: 900px;
 }
 
 .screen {
-	width: 400px;
+	min-width: 400px;
 	height: 750px;
 	border-radius: 30px;
 	background-color: white;
@@ -34,7 +34,7 @@ body {
 	box-sizing: border-box;
 }
 .shadow {
-	box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
 }
 .Topmenu a {
 	text-decoration: none;
@@ -123,6 +123,7 @@ body {
 	height: 80px;
 	border-radius: 20px;
 	padding: 5px 20px;
+	margin: 3px 0px;
 	transition: box-shadow ease-in-out 0.2s;
 }
 .musicList__row__leftbox {
@@ -154,12 +155,138 @@ body {
 	margin-top: 5px;
 }
 
-.musicList__row:nth-child(2) {
-}
-
-.musicList__row:nth-child(2) img {
+.musicList__nowPlaying {
+	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
 
 .musicList__row:active {
 	box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.4);
+}
+
+.musicList__container {
+	position: relative;
+}
+
+.musicList__container img {
+	display: block;
+}
+
+.musicList__container i {
+	position: absolute;
+	top: 40%;
+	left: 40%;
+	visibility: hidden;
+	color: white;
+	z-index: 1;
+}
+
+.musicList__nowPlaying i {
+	visibility: visible;
+}
+
+.PlayingNav {
+	position: absolute;
+	bottom: 20px;
+	left: 0px;
+	margin: 0px 5%;
+	width: 90%;
+	height: 70px;
+	border-radius: 40px;
+	background-color: black;
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px 20px;
+}
+
+.PlayingNav__info {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.PlayingNav__info h5 {
+	margin: 0px;
+	color: rgb(145, 145, 145);
+}
+
+.PlayingNav__info h3 {
+	margin: 0px;
+	margin-top: 5px;
+	color: white;
+}
+
+.PlayingNav__nav {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.PlayingNav__nav i {
+	color: white;
+	margin: 0px 10px;
+}
+
+.PlayingScreen {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 100%;
+	padding: 30px 15px;
+}
+
+.PlayingScreen img {
+	width: 80%;
+	height: 80%;
+	border-radius: 15px;
+	box-shadow: 0px 10px 30px #e33516;
+	margin-bottom: 30px;
+}
+
+.PlayingScreen__info {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.PlayingScreen__info h1 {
+	margin-bottom: 5px;
+}
+.PlayingScreen__info h3 {
+	margin: 0px;
+	color: grey;
+}
+
+.PlayingScreen__time {
+	margin: 30px;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.PlayingScreen__time input {
+	width: 90%;
+}
+
+.PlayingScreen__nav {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
+	padding: 15px;
+}
+
+.PlayingScreen__nav > a {
+	color: black;
+}
+
+.PlayingScreen__nav > a:nth-child(3) {
+	border-radius: 100%;
+	box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.4);
+}
+.PlayingScreen__nav > a:active {
+	color: grey;
 }
